# freedeck

./: .gitignore  CHANGELOG.md  FreeDeck - Architecture Documentation.md  LICENSE  README.md  ROADMAP.md  THIRD_PARTY_NOTICES.md  freedeck.code-workspace  package.json  pnpm-lock.yaml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/cpp/: engine_shim.cc  engine_shim.h
apps/desktop/src-tauri/src/: engine_bridge.rs  lib.rs  main.rs
apps/desktop/src/components/: CenterMixerPanel.tsx  CompactWaveform.tsx  Crossfader.tsx  Deck.tsx  DualWaveformDeck.tsx  Fader.tsx  GeekDataPanel.tsx  HorizontalFader.tsx  JogWheel.tsx  Knob.tsx  Library.tsx  Mixer.tsx  OverviewWaveform.tsx  PhaseMeter.tsx  RotaryKnob.tsx  ScrollingWaveform.tsx  SegmentedVUMeter.tsx  TempoColumn.tsx  TopBar.tsx  TrackInfoBar.tsx  Transport.tsx  VUMeter.tsx  VerticalFader.tsx  Waveform.tsx
apps/desktop/src/hooks/: useCrossfaderShortcuts.ts  usePointerValue.ts
apps/desktop/src/lib/: bpmOctave.test.ts  bpmOctave.ts  crossfaderMotion.test.ts  crossfaderMotion.ts  deckLayout.ts  engine.ts  formatAnalysis.test.ts  formatAnalysis.ts  jogWheel.test.ts  jogWheel.ts  knobArc.test.ts  knobArc.ts  knobDrag.test.ts  knobDrag.ts  knobSnap.test.ts  knobSnap.ts  mixerLayout.ts  mockLibrary.ts  pitchBend.test.ts  pitchBend.ts  pointerValue.test.ts  pointerValue.ts  sync.test.ts  sync.ts  tempoColumn.test.ts  tempoColumn.ts  vuSegments.test.ts  vuSegments.ts  waveformWindow.test.ts  waveformWindow.ts
docs/: ARCHITECTURE.md  DDJ-FLX4.md  RELEASING.md
docs/superpowers/plans/: 2026-06-08-crossfader-keyboard-shortcuts.md  2026-06-08-github-repo-setup.md  2026-06-08-tempo-layout-bpm-fix.md
docs/superpowers/specs/: 2026-06-08-continuous-beat-sync-design.md
engine/: CMakeLists.txt
engine/build-aubio/juce/tools/: JUCEExportConfig.cmake  JUCEToolsExport.cmake
engine/include/freedeck/: EngineSnapshot.h  TrackAnalysis.h  engine.h
engine/src/: Deck.cpp  Deck.h  Engine.cpp  Eq.cpp  Eq.h  Filter.cpp  Filter.h  Mixer.cpp  Mixer.h  SyncController.h  TimeStretch.cpp  TimeStretch.h  TrackAnalysis.cpp  TrackAnalysis.h  Waveform.cpp  Waveform.h
engine/test/: beatgrid_test.cpp  console_main.cpp  deck_audio_test.cpp  eq_test.cpp  filter_test.cpp  loop_test.cpp  sync_test.cpp  time_stretch_test.cpp  track_analysis_test.cpp
engine/test/fixtures/: tone_a.wav.json
